[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/oq", "/tests", "/README.md", "/LICENSE"]

[project]
name = "oq"
version = "0.0.3"
description = "Objects Quickly - AI tools at your finger tips"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [{ name = "Thor Whalen" }]
dependencies = ["config2py>=0.1.44", "guide>=0.0.8"]

[project.license]
text = "mit"

[project.urls]
Homepage = "https://github.com/thorwhalen/oq"
Repository = "https://github.com/thorwhalen/oq"

[project.optional-dependencies]
# Scientific computing and data analysis
numpy = ["numpy>=1.20.0"]
pandas = ["pandas>=1.3.0"]
scipy = ["scipy>=1.7.0"]

# Visualization
matplotlib = ["matplotlib>=3.4.0"]
seaborn = ["seaborn>=0.11.0"]
plotly = ["plotly>=5.0.0"]

# Machine learning
sklearn = ["scikit-learn>=1.0.0"]
xgboost = ["xgboost>=1.5.0"]
lightgbm = ["lightgbm>=3.3.0"]

# Deep learning
torch = ["torch>=1.10.0"]
tensorflow = ["tensorflow>=2.8.0"]

# Statistics
statsmodels = ["statsmodels>=0.13.0"]

# Convenience bundles
datascience = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]
ml = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
]
deeplearning = ["numpy>=1.20.0", "torch>=1.10.0", "tensorflow>=2.8.0"]
viz = ["matplotlib>=3.4.0", "seaborn>=0.11.0", "plotly>=5.0.0"]
all = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "torch>=1.10.0",
    "tensorflow>=2.8.0",
    "statsmodels>=0.13.0",
]

# Development and Testing
test = ["pytest>=7.0", "pytest-cov>=4.0"]
testing = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]
docs = ["sphinx>=6.0", "sphinx-rtd-theme>=1.0"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = ["D100"]
ignore = ["D203", "E501", "B905"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D"]
"**/examples/*" = ["D"]
"**/scrap/*" = ["D"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
filterwarnings = [
    # Ignore all deprecation warnings from guide package
    "ignore:.*:DeprecationWarning:guide.*",
    # Ignore scipy deprecation warnings from guide package
    "ignore:.*scipy\\.stats\\.stats.*:DeprecationWarning:guide.*",
    "ignore:.*scipy\\.stats\\.morestats.*:DeprecationWarning:guide.*",
    "ignore:.*scipy\\.stats\\.kde.*:DeprecationWarning:guide.*",
    "ignore:.*scipy\\.signal\\.waveforms.*:DeprecationWarning:guide.*",
    "ignore:.*scipy\\.stats\\.mstats_basic.*:DeprecationWarning:guide.*",
    "ignore:.*scipy\\.stats\\.mstats_extras.*:DeprecationWarning:guide.*",
    "ignore:.*scipy\\.sparse\\.csc.*:DeprecationWarning:guide.*",
    "ignore:.*scipy\\.fftpack\\.basic.*:DeprecationWarning:guide.*",
    # Ignore torch distributed warnings
    "ignore:.*torch\\.distributed\\.reduce_op.*:FutureWarning",
]
